add paged list component

--- a/app/src/app/item-uses/item-uses.component.html
+++ b/app/src/app/item-uses/item-uses.component.html
@@ -1,3 +1,13 @@
-<p>
-  item-uses works!
+<p *ngIf="item">
+  Uses of
+  <app-item-icon [item]="item"></app-item-icon>
+  {{ item.displayName }} ( {{ item.name }} )
 </p>
+
+<app-paged-list *ngIf="recipeService" [itemsService]="recipeService" [query]="query">
+  <ng-template let-item>
+    <mat-list-item>
+      <app-recipe matLine [recipe]="item"></app-recipe>
+    </mat-list-item>
+  </ng-template>
+</app-paged-list>
