--- a/app/src/app/positioned-item-stack/positioned-item-stack.component.html
+++ b/app/src/app/positioned-item-stack/positioned-item-stack.component.html
@@ -1,4 +1,4 @@
-<app-item-stack *ngIf="items.length > 0" [itemStack]="getActiveStack()"></app-item-stack>
-<button mat-icon-button *ngIf="items.length > 1" class="item-cycler" (click)="cycleStack()">
+<app-item-stack *ngIf="item.stacks.length > 0" [itemStack]="getActiveStack()"></app-item-stack>
+<button mat-icon-button *ngIf="item.stacks.length > 1" class="item-cycler" (click)="cycleStack()">
   <mat-icon>more_vert</mat-icon>  
 </button>
