--- a/app/src/app/plan/plan.component.html
+++ b/app/src/app/plan/plan.component.html
@@ -1,4 +1,12 @@
 <div *ngIf="plan">
+  <mat-toolbar color="primary">
+    <mat-form-field class="plan-title">
+      <input matInput [(ngModel)]="plan.title">
+    </mat-form-field>
+    <button mat-button (click)="savePlan(plan)">
+      SAVE
+    </button>
+  </mat-toolbar>
   <div class="invetory-wrapper">
     <app-inventory [(stacks)]="plan.goals" (onItemsChanges)="recalcPlan()"></app-inventory>
     <app-inventory [(stacks)]="plan.inventory" (onItemsChanges)="recalcPlan()"></app-inventory>
@@ -9,7 +17,7 @@
     <mat-list-item *ngFor="let step of plan.craftingSteps">
       <div class="crafting-step">
         <span class="step-count">
-          {{ step.count }}
+          {{ step.count }} x 
         </span>
         <span class="results" *ngIf="step.recipe.result">
           <app-item-stack [itemStack]="result" *ngFor="let result of step.recipe.result">
@@ -31,15 +39,29 @@
     </mat-list-item>
   </mat-list>
 
-  Materials
-
-  <mat-list class="required-ingredients">
+  <mat-toolbar color="primary">
+    Materials
+  </mat-toolbar>
+  <mat-list class="required-ingredients ingredient-list">
     <mat-list-item *ngFor="let ingredient of requiredItems">
     <app-item-stack [itemStack]="ingredient">
     </app-item-stack>
       <button mat-button (click)="expandStack(ingredient)">
         EXPAND
       </button>
+      <button mat-button (click)="expandStack(ingredient)">
+        AUTO
+      </button>
+    </mat-list-item>
+  </mat-list>
+
+  <mat-toolbar color="primary">
+    Others
+  </mat-toolbar>
+  <mat-list class="result-ingredients ingredient-list">
+    <mat-list-item *ngFor="let ingredient of results">
+      <app-item-stack [itemStack]="ingredient">
+      </app-item-stack>
     </mat-list-item>
   </mat-list>
 
