--- a/app/src/app/plan/plan.component.html
+++ b/app/src/app/plan/plan.component.html
@@ -49,7 +49,7 @@
       <button mat-button (click)="expandStack(ingredient)">
         EXPAND
       </button>
-      <button mat-button (click)="expandStack(ingredient)">
+      <button mat-button (click)="autoExpandStack(ingredient)">
         AUTO
       </button>
     </mat-list-item>
