--- a/app/src/app/recipe-detail/recipe-detail.component.html
+++ b/app/src/app/recipe-detail/recipe-detail.component.html
@@ -7,7 +7,13 @@
       </mat-toolbar>
       <div *ngFor="let result of recipe.result">
         <app-inventory [stacks]="result"></app-inventory>
+        <button mat-button (click)="removeIngredient(recipe.result, result)">
+          REMOVE
+        </button>
       </div>
+      <button mat-button (click)="addIngredient(recipe.result)">
+        ADD
+      </button>
     </div>
     <div class="igredient-items">
       <mat-toolbar color="primary">
@@ -15,28 +21,16 @@
       </mat-toolbar>
       <div *ngFor="let ingredient of recipe.ingredients">
         <app-inventory [stacks]="ingredient"></app-inventory>
+        <button mat-button (click)="removeIngredient(recipe.ingredients, ingredient)">
+          REMOVE
+        </button>
       </div>
+      <button mat-button (click)="addIngredient(recipe.ingredient)">
+        ADD
+      </button>
     </div>
   </div>
-
-    <!-- <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>Results:</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-      </mat-card-content>
-    </mat-card>
-
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>Ingredients:</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-      </mat-card-content>
-    </mat-card> -->
-
+  <button mat-raised-button (click)="saveRecipe(recipe)">
+    SAVE
+  </button>
 </div>
