add simple craft graph

--- a/app/src/app/plan/plan.component.html
+++ b/app/src/app/plan/plan.component.html
@@ -65,5 +65,8 @@
     </mat-list-item>
   </mat-list>
 
-  Graph
+  <mat-toolbar color="primary">
+   Graph
+  </mat-toolbar>
+  <app-craft-graph [plan]="plan"></app-craft-graph>
 </div>
